@@ -6,6 +6,7 @@ compiling:
 
 interface:
 - new parameter "solinfeasible" for constraint handler callback methods ENFOLP and ENFOPS
+- new method SCIPgetVerbLevel()
 
 parameters:
 - new parameter "reading/zplreader/changedir" to control behavior of path switching of ZIMPL file reader
